# detectron2_demo

./: .gitignore  README.md  prediction_result.json  pyproject.toml
configs/: DLA_mask_rcnn_X_101_32x8d_FPN_3x.yaml
demo/: demo.py  main.py  main_test.py  main_test_ver2.py
