[tool.poetry]
name = "detectron2_demo"
version = "1.0.5"
description = ""
authors = ["None"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.6"
torch = "^1.4.0"
opencv-python = ">=4.2.0.32"
torchvision = ">=0.5.0"
click = "^7.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
